Fix for image stretching on homepage

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -216,11 +216,6 @@ $colors: $color0, $color3, $color6, $color9, $color1, $color4, $color7, $color10
     height: 50px;
     margin-right: 7px;
     position: relative;
-    img { 
-      width: 50px;
-      height: 50px;
-      opacity: 0.6;
-    }
 
     span.timestamp {
       position: relative;
@@ -252,8 +247,8 @@ $colors: $color0, $color3, $color6, $color9, $color1, $color4, $color7, $color10
   margin-right: 7px;
   position: relative;
   img { 
-    width: 50px;
-    height: 50px;
+    max-height: 50px;
+    max-width: 50px;
     opacity: 0.5;
   }
 
