--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -85,8 +85,7 @@
   }
   img.logo {
     opacity: 1.0;
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
   }
   
   .content {
